--- a/house-demo/src/main/resources/templates/index.html
+++ b/house-demo/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <a href="helloworld.html">點我進入HelloWorld</a>
+    <a href="helloworld">點我進入HelloWorld</a>
 
 </body>
 </html>
